@@ -17,7 +17,7 @@ not commitments.
 - add sample CGI that handles an uploaded image (done)
 - examples for fountain filter in Imager::Filters
 - allow Imager::Fountain to take color descriptions (eg. blue, FF000)
-  instead of color objects for c0 and c1.
+  instead of color objects for c0 and c1 (done)
 - support newer GIMP gradient files with the Name line (done)
 - provide access to right-side bearing information from the bounding box
   function
